--- a/main.html
+++ b/main.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<table border>
+		<caption>Student details</caption>
 	<thead>
 		<tr>
 			<th>NAME</th>
